package com.ich.reciptopia.common.util

object TestTags {
    const val SEARCH_WITH_NAME = "search with name"
    const val SEARCH_SCREEN = "search screen"
    const val ADD_INGREDIENT_TEXT_FIELD = "add ingredient text field"
    const val ADD_INGREDIENT_BUTTON = "add ingredient button"
    const val SEARCH_SCREEN_SEARCH_BUTTON = "search screen search button"
    const val CHIP_ROW = "chip row"
}